<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2014 Google, Inc

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="app_name">Zombie TAG</string>

    <string name="location_updated_message">Location updated</string>

    <string name="player_id_label">Player ID:   </string>
    <string name="player_state_label">Player state:   </string>
    <string name="latitude_label">Latitude:   </string>
    <string name="longitude_label">Longitude:   </string>

    <string name="zombies_created_label">Zombies created:   </string>
    <string name="zombie_count_label">Zombie count:   </string>
    <string name="human_count_label">Human count:   </string>

    <string name="last_update_label">Last update time:   </string>
</resources>
